# ffmpeg-for-android

./: gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/hua/testlibs/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: DecodeVideo.cpp  EncodeAVDemo.cpp  EncodeAudioDemo.cpp  FilterVideoTest.cpp  NativePlayer.cpp  native-lib.cpp  readfileInfo.cpp
app/src/main/cpp/include/: EncodeAVDemo.h  EncodeAudioDemo.h  androidlog.h  com_hua_cmakerules_NativeAudio.h  com_hua_nativeFFmpeg_NativeFFmpeg.h  readfileInfo.h
app/src/main/java/com/hua/cmakerules/: NativeAudio.java
app/src/main/java/com/hua/nativeFFmpeg/: NativeFFmpeg.java
app/src/main/java/com/hua/testlibs/: MainActivity.java  VideoEncodeActivity.java
app/src/main/java/com/hua/testlibs/activity/: NativePlayActivity.java
app/src/main/jniLibs/arm64-v8a/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/jniLibs/armeabi-v7a/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/jniLibs/include/: TestThirdLib.h
app/src/main/jniLibs/include/libavcodec/: avcodec.h  testhh.h
app/src/main/jniLibs/include/libavfilter/: buffersink.h  buffersrc.h
app/src/main/jniLibs/include/libavformat/: avformat.h  avio.h
app/src/main/jniLibs/include/libavutil/: avutil.h  channel_layout.h  dict.h  error.h  file.h  frame.h  imgutils.h  log.h  mem.h  opt.h  samplefmt.h
app/src/main/jniLibs/include/libswresample/: swresample.h
app/src/main/jniLibs/include/libswscale/: swscale.h
app/src/main/jniLibs/x86_64/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/res/layout/: activity_main.xml  activity_video_encode.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/hua/testlibs/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
